<resources>
    <string name="app_name">Pix</string>



    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_activity_log_in">Pix</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign up HERE!</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_size_limit_warning">The selected video must be less than 10 MB.</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_file_too_large">The selected file is too large! Select a new file.</string>

    <string-array name="camera_choices">
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="video_file_size_warning">The selected video must be less than 10 MB.</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">Pix</string>
    <string name="title_activity_viewer_photo">ViewerPhotoActivity</string>
<<<<<<< HEAD
    <string name="title_activity_message_recipient">Choose Friends</string>
    <string name="title_activity_edit_members">Users</string>
=======
    <string name="title_activity_message_recipient">MessageRecipientActivity</string>
    <string name="title_activity_edit_members">EditMemberActivity</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_section3">TIMELINE</string>
>>>>>>> 63cd4984ff0c30129acc8149525bafd03fe4d9cf
    <string name="title">Pix</string>
    <string name="subtitle">Share Photo by material design</string>
    <string name="sign_up_buuton_cancel">CANCEL</string>
    <string name="content_desc_message_icon">Message Icon</string>
    <string name="content_desc_user_icon">user_icon</string>
    <string name="content_desc_user_checkmark">User Checkmark</string>
    <string name="push_message">You have a new Pix message from</string>
<<<<<<< HEAD
    <string name="title_activity_time_line">TimeLineActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="facebook_app_id">1626288724295959</string>
    <string name="edit_member_follow">Follow!</string>
    <string name="edit_member_unfollower">Unfollow</string>
    <string name="title_activity_add_text">AddTextActivity</string>
    <string name="add_texts">Oops!, fill out both comment and title.</string>
    <string name="title_activity_add_text_post">AddPostTextActivity</string>
=======
    <string name="time_line_activity">TimeLineActivity</string>
    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
>>>>>>> 63cd4984ff0c30129acc8149525bafd03fe4d9cf
</resources>
