<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background"
                tools:context="com.example.android.pix.Activity.LogInActivity">

    <com.rey.material.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/title"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <com.rey.material.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:id="@+id/sub_title"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/sub_title"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/login_horizontal_padding"
        android:paddingRight="@dimen/login_horizontal_padding"
        android:paddingTop="@dimen/login_vertical_padding"
        android:paddingBottom="@dimen/login_vertical_padding"
        android:background="@android:color/white"
        >


        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username_hint"
            android:textColorHint="@color/light_gray"
            android:textSize="18sp"
            android:textColor="@color/blue"
            />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/light_gray"
            android:textSize="18sp"
            android:textColor="@color/blue"
            />

    </LinearLayout>

    <com.rey.material.widget.Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_label"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@color/actionButton"
        android:textColor="@android:color/white"

        />

    <com.rey.material.widget.TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <!--<com.twitter.sdk.android.core.identity.TwitterLoginButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/twitter_login"-->
        <!--android:layout_above="@+id/signUpText"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="46dp"/>-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; OR &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;"-->
        <!--android:id="@+id/textView"-->
        <!--android:layout_marginTop="35dp"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_below="@+id/loginButton"-->
        <!--android:layout_centerHorizontal="true"/>-->


</RelativeLayout>
