<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@drawable/background"
                tools:context="com.example.android.pix.Activity.SignUpActivity">
    <com.rey.material.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/title"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <com.rey.material.widget.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:id="@+id/sub_title"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/signup_horizontal_padding"
        android:paddingRight="@dimen/signup_horizontal_padding"
        android:paddingTop="@dimen/signup_vertical_padding"
        android:paddingBottom="@dimen/signup_vertical_padding"
        android:background="@android:color/white"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/sub_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/username_hint"
        android:textColor="@color/blue">

    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameField"
        android:layout_below="@+id/usernameField"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textColor="@color/blue"/>

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_below="@+id/passwordField"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:textColor="@color/blue"/>

   </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:id="@+id/button_Divider"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/button_divider"/>

    <com.rey.material.widget.Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLayout"
        android:layout_marginRight="0dp"
        android:text="@string/sign_up_button_label"
        android:background="@color/actionButton"
        android:textColor="@android:color/white"
        android:layout_toLeftOf="@id/button_Divider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <com.rey.material.widget.Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_buttom"
        android:text="@string/sign_up_buuton_cancel"
        android:layout_below="@id/editTextLayout"
        android:layout_marginLeft="0dp"
        android:background="@color/actionButton"
        android:textColor="@android:color/white"
        android:layout_toRightOf="@id/button_Divider"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Sign up by email or Log in with SNS!"-->
        <!--android:id="@+id/textView2"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_below="@+id/sub_title"-->
        <!--android:layout_centerHorizontal="true"/>-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; OR &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;"-->
        <!--android:id="@+id/textView3"-->
        <!--android:layout_marginTop="33dp"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_below="@+id/button_Divider"-->
        <!--android:layout_alignRight="@+id/title"-->
        <!--android:layout_alignEnd="@+id/title"/>-->


    <!--<com.twitter.sdk.android.core.identity.TwitterLoginButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/twitter_login"-->
        <!--android:layout_below="@+id/textView3"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="46dp"/>-->

</RelativeLayout>
